# EmuGator

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: build-and-test.yaml
assets/: tokenProvider.js
docs/: instructions.txt  useful-references.md
docs/design-plan/: main.typ  refs.bib
docs/pre-alpha/: main.typ
src/: assembler.rs  assembler_tests.rs  assembly.rs  main.rs  utils.rs
src/assembler/: assembled_program.rs  mod.rs  tests.rs
src/code_editor/: highlight.rs  mod.rs  monaco_editor.rs
src/emulator/: command-line.rs  datapath.rs  emulator.rs  handlers.rs  isa.rs  mod.rs  tests.rs
src/interface/: data_views.rs  datapath_visualization.rs  instruction_views.rs  memory_view.rs  mod.rs  register_view.rs  run_buttons.rs
src/isa/: definitions.rs  instruction.rs  mod.rs
test-files/: different-locations.s  prototype-demo.s  prototype.s  simple-loop.s  syntax-check.s
