[package]
name = "emu-gator"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# dioxus
dioxus = { version = "0.5", features = ["web", "router"] }
manganis = "0.2"

# text editor
monaco = "0.5"

# wasm stuff
wasm-bindgen = "0.2"
web-sys = "0.3"

# debug
dioxus-logger = "0.5"
