[package]
name = "emu-gator"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# dioxus
dioxus = { version = "0.6", features = ["web", "router"] }
dioxus-logger = "0.6"

# text editor
monaco = "0.5"

# wasm stuff
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# util
strum = { version = "0.26.3", features = ["derive"] }
bimap = "0.6"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
